added smoking component

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Dr Smile</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PGPW5WJZ6M"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PGPW5WJZ6M');
+  </script>
   <base href="/">
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=1" />
