--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,9 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
   <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
+  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  
+  <script src="assets/mbr-testimonials-slider/mbr-testimonials-slider.js"></script>  
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>  
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
