--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -38,8 +39,10 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+  <!--script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script-->
+  <!--script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script-->
   <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  
   <script src="assets/mbr-testimonials-slider/mbr-testimonials-slider.js"></script>  
   <script src="assets/smoothscroll/smooth-scroll.js"></script>  
@@ -51,5 +54,6 @@
   <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="https://kit.fontawesome.com/5dd560037c.js" crossorigin="anonymous"></script>
+  
 </body>
 </html>
