--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Dr.Smile,dentist,kolakata">
   <title>Dr Smile</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PGPW5WJZ6M"></script>
@@ -9,8 +10,16 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-PGPW5WJZ6M');
+    gtag('config', 'G-PGPW5WJZ6M',{cookie_flags: 'secure;samesite=none'});
   </script>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MZTRSDJ');
+  </script>
+  <!-- End Google Tag Manager -->
   <base href="/">
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=1" />
@@ -34,6 +43,12 @@
   <link rel="stylesheet" href="assets/mobirise/css/mbrtheme.css">
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MZTRSDJ"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe>
+  </noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <app-root></app-root>
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
@@ -44,15 +59,10 @@
   <!--script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script-->
   <!--script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script-->
   <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  
-  <script src="assets/mbr-testimonials-slider/mbr-testimonials-slider.js"></script>  
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>  
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
-  <script src="assets/theme/js/script.js"></script>
   <script src="https://kit.fontawesome.com/5dd560037c.js" crossorigin="anonymous"></script>
   
 </body>
